@@ -1,7 +1,7 @@
 <!DOCTYPE beans PUBLIC "-//SPRING//DTD BEAN//EN" "http://www.springframework.org/dtd/spring-beans.dtd">
 <beans>
 	<bean id="main" class="edu.mcw.rgd.RNASeqPipeline.Manager">
-		<property name="version" value="RNASeq Pipeline -- build Aug 10, 2023" />
+		<property name="version" value="RNASeq Pipeline -- build Aug 22, 2023" />
 		<property name="ncbiSoftFilesFtpLink" value="ftp://ftp.ncbi.nlm.nih.gov/geo/series/"/>
 		<property name="indexOfStartFolderForDownload" value="0"/> <!-- default is 0; applies to first thread only -->
 		<property name="indexOfStopFolderForDownload" value="240"/> <!-- applies to last thread only; 240 was last series available in geo as of Aug 9, 2023 -->
